working add, remove, edit, get, getbyid for classification

--- a/Service/wwwroot/index.html
+++ b/Service/wwwroot/index.html
@@ -5,11 +5,11 @@
     <title></title>
 </head>
 <body>
-    <h1>VOC</h1>
+    <h1>CCG API Template</h1>
     <h2>Development mode</h2>
     <p>This site runs the API. It can be browsed and tested by visiting <a href="/swagger">swagger</a>.</p>
 
-    <p>The front-end can be run locally on your local computer by:</p>
+    <!--<p>The front-end can be run locally on your local computer by:</p>
     <ul>
         <li>Open <em>Web</em> folder in a Visual Studio Code.</li>
         <li>
@@ -19,7 +19,7 @@
                 <li>npm run serve</li>
             </ul>
         </li>
-    </ul>
+    </ul>-->
 
 </body>
 </html>
