Update latest template. Committing launch settings.

--- a/Service/wwwroot/index.html
+++ b/Service/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1>CCG API Template</h1>
+    <h1>CCG CCT</h1>
     <h2>Development mode</h2>
     <p>This site runs the API. It can be browsed and tested by visiting <a href="/swagger">swagger</a>.</p>
 
