Seeding database, changes to External pages and Resource files and image uploads

--- a/Web/wwwroot/ajax/sitemenu-ccg-fr.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-fr.html
@@ -5,56 +5,41 @@
     <div class="row">
         <ul class="list-inline menu" role="menubar">
             <li>
-                <a href="https://www.ccg-gcc.gc.ca/navigation/index-fra.html" class="item">Navigation</a>
+                <a href="/fr/Mockups/Index" class="item">Outil de compétence professionnelle</a>
                 <ul class="sm list-unstyled" id="project" role="menu">
-                    <li><a href="http://www.marinfo.gc.ca/e-nav/index-fra.php">Portail d’information maritime (navigation électronique)</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/mcts-sctm/index-fra.html">Services de communications et de trafic maritimes</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/icebreaking-deglacage/index-fra.html">Déglaçage</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/aids-aides/index-fra.html">Aides &agrave; la navigation</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/marine-services-fees-droits-services-maritime/index-fra.html">Frais de services maritimes</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/waterways-voies-navigables/index-fra.html">Gestion des voies navigables</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/index-fra.html">Navigation - Plus</a></li>
+                    <li><a href="/fr/Mockups/member_position">Membre de la GCC</a></li>
+                    <li><a href="/fr/Mockups/External_Candidate">Candidat externe</a></li>
+                    <li><a href="/fr/Mockups/Index">Étudiant</a></li>
                 </ul>
             </li>
             <li>
-                <a href="https://www.ccg-gcc.gc.ca/fleet-flotte/index-fra.html" class="item">Flotte</a>
+                <a href="https://www.ccg-gcc.gc.ca/index-fra.html" class="item">À propos de la CCG</a>
                 <ul class="sm list-unstyled" id="implement" role="menu">
-                    <li><a href="https://inter-j01.dfo-mpo.gc.ca/fdat/vessels">Tous les navires – recherche</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/index-fra.html">Navigation</a></li>
                     <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/helicopters/index-fra.html">Hélicoptères</a></li>
                     <li><a href="https://www.tpsgc-pwgsc.gc.ca/app-acq/amd-dp/mer-sea/sncn-nss/index-fra.html">Stratégie nationale de construction navale</a></li>
                     <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte//vessel-maint-navire-2020-21-fra.html">Calendrier de l'entretien des navires</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/index-fra.html">Flotte - Plus</a></li>
                 </ul>
             </li>
             <li>
-                <a href="https://www.ccg-gcc.gc.ca/college-careers-fra.html" class="item">Collège et carrières</a>
+                <a href="https://www.ccg-gcc.gc.ca/college/index-fra.html" class="item">Collège de la GCC</a>
                 <ul class="sm list-unstyled" id="contribute" role="menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/college/index-fra.html">Collège de la Garde côtière canadienne</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/index-fra.html">Carrières à la Garde côtière</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/college/officer-training-formation-officier/index-fra.html">Programme de formation des officiers</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/college/op-training-formation-op-fra.html">Formation opérationnelle</a></li>
                     <li><a href="https://www.ccg-gcc.gc.ca/college-careers-fra.html">Collège et carrières - Plus</a></li>
                 </ul>
             </li>
             <li>
-                <a href="https://www.ccg-gcc.gc.ca/programs-services-fra.html" class="item">Programmes et services</a>
+                <a href="https://www.ccg-gcc.gc.ca/careers-carrieres/index-fra.html" class="item">Carrières à la GCC</a>
                 <ul class="sm list-unstyled" role="menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/aids-aides/index-fra.html">Aides à la navigation</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/environmental-environnementale/index-fra.html">Intervention environnementale</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/icebreaking-deglacage/index-fra.html">Déglaçage</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/mcts-sctm/index-fra.html">Services de communications et de trafic maritimes</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/maritime-security-surete-maritime/index-fra.html">Sûreté maritime</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/search-rescue-recherche-sauvetage/index-fra.html">Recherche et sauvetage</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/waterways-voies-navigables/index-fra.html">Gestion des voies navigables</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/job-emploi-fra.html">Possibilités d’emploi actuelles</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/student-job-emplois-etudiants-fra.html">Emplois pour étudiants</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/volunteers-benevoles-fra.html">Bénévolat</a></li>
                     <li><a href="https://www.ccg-gcc.gc.ca/programs-services-fra.html">Programmes et services - Plus</a></li>
                 </ul>
             </li>
             <li>
-                <a href="https://www.ccg-gcc.gc.ca/contact/emergency-urgence/index-fra.html" class="item">Numéros d’urgence</a>
-                <ul class="sm list-unstyled" role="menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/contact/emergency-urgence/search-rescue-recherche-sauvetage-fra.html">Recherche et sauvetage</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/contact/mcts-contact-stcm-fra.html">Sécurité et dangers maritimes</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/contact/emergency-urgence/marine-pollution-marine-fra.html">Pollution marine</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/contact/emergency-urgence/index-fra.html">Numéros d’urgence - Plus</a></li>
-                </ul>
+                <a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" class="item">Contactez-nous</a>
             </li>
         </ul>
     </div>
