--- a/Web/wwwroot/ajax/sitemenu-ccg-fr.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-fr.html
@@ -5,11 +5,11 @@
     <div class="row">
         <ul class="list-inline menu" role="menubar">
             <li>
-                <a href="/fr/Mockups/Index" class="item">Outil de compétence professionnelle</a>
+                <a href="/fr/Index" class="item">Outil de compétence professionnelle</a>
                 <ul class="sm list-unstyled" id="project" role="menu">
-                    <li><a href="/fr/Mockups/member_position">Membre de la GCC</a></li>
-                    <li><a href="/fr/Mockups/External_Candidate">Candidat externe</a></li>
-                    <li><a href="/fr/Mockups/Index">Étudiant</a></li>
+                    <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
+                    <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
+                    <li><a href="/fr/Student/Index">Étudiant</a></li>
                 </ul>
             </li>
             <li>
