--- a/Web/wwwroot/ajax/sitemenu-ccg-en.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-en.html
@@ -3,13 +3,13 @@
     <body>
         <div class="pnl-strt container visible-md visible-lg nvbar">
             <h2>Site menu</h2>
-              <div class="row">
+               <div class="row">
                 <ul class="list-inline menu" role="menubar">
-                  <li><a href="/en/Mockups/Index" class="item">Career Competency Tool</a>
+                  <li><a href="/en/" class="item">Career Competency Tool</a>
                     <ul class="sm list-unstyled" id="project" role="menu">
-                      <li><a href="/en/Mockups/member_position">CCG Member</a></li>
-                      <li><a href="/en/Mockups/External_Candidate">External Candidate</a></li>
-                      <li><a href="/en/Mockups/Student">Student</a></li>
+                      <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
+                      <li><a href="/en/Candidate/Index">External Candidate</a></li>
+                      <li><a href="/en/Student/Index">Student</a></li>
                     </ul>
                   </li>
                   <li><a href="https://www.ccg-gcc.gc.ca/index-eng.html" class="item">About the CCG</a>
