Update to Seed Data and Student section.

--- a/Web/wwwroot/ajax/sitemenu-ccg-en.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-en.html
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head>
+<html lang="en">
+<head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head>
     <body>
         <div class="pnl-strt container visible-md visible-lg nvbar">
             <h2>Site menu</h2>
                <div class="row">
                 <ul class="list-inline menu" role="menubar">
-                  <li><a href="/en/" class="item">Career Competency Tool</a>
-                    <ul class="sm list-unstyled" id="project" role="menu">
-                      <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
-                      <li><a href="/en/Candidate/Index">External Candidate</a></li>
-                      <li><a href="/en/Student/Index">Student</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="https://www.ccg-gcc.gc.ca/index-eng.html" class="item">About the CCG</a>
-                    <ul class="sm list-unstyled" id="implement" role="menu">
-                      <li><a href="https://www.ccg-gcc.gc.ca/navigation/index-eng.html">Navigation</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/helicopters/index-eng.html">Helicopters</a></li>
-                      <li><a href="https://www.tpsgc-pwgsc.gc.ca/app-acq/amd-dp/mer-sea/sncn-nss/index-eng.html">Shipbuilding procurement strategy</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/vessel-maint-navire-2020-21-eng.html">Vessels maintenance calendar</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="https://www.ccg-gcc.gc.ca/college/index-eng.html" class="item">CCG College</a>
-                    <ul class="sm list-unstyled" id="contribute" role="menu">
-                      <li><a href="https://www.ccg-gcc.gc.ca/college/officer-training-formation-officier/index-eng.html">Officer Training Program</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/college/op-training-formation-op-eng.html">Operational training</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/college-careers-eng.html">College and careers - more</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/index-eng.html" class="item">CCG Careers</a>
-                    <ul class="sm list-unstyled" role="menu">
-                      <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/job-emploi-eng.html">Current job openings</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/student-job-emplois-etudiants-eng.html">Student jobs</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/volunteers-benevoles-eng.html">Volunteer</a></li>
-                      <li><a href="https://www.ccg-gcc.gc.ca/programs-services-eng.html">Programs and services - more</a></li>
-                    </ul>
-                  </li>
+                  <li><a href="/en/" class="item">Career Competency Tool</a></li>
+                  <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
+                  <li><a href="/en/Candidate/Index">External Candidate</a></li>
+                  <li><a href="/en/Student/Index">Student</a></li>
                   <li><a href="https://www.ccg-gcc.gc.ca/contact/index-eng.html" class="item">Contact us</a></li>
                 </ul>
               </div>
