--- a/Web/wwwroot/ajax/sitemenu-ccg-fr.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-fr.html
@@ -5,43 +5,11 @@
 
     <div class="row">
         <ul class="list-inline menu" role="menubar">
-            <li>
-                <a href="/fr/Index" class="item">Outil de compétence professionnelle</a>
-                <ul class="sm list-unstyled" id="project" role="menu">
-                    <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
-                    <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
-                    <li><a href="/fr/Student/Index">Étudiant</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.ccg-gcc.gc.ca/index-fra.html" class="item">À propos de la CCG</a>
-                <ul class="sm list-unstyled" id="implement" role="menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/index-fra.html">Navigation</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/helicopters/index-fra.html">Hélicoptères</a></li>
-                    <li><a href="https://www.tpsgc-pwgsc.gc.ca/app-acq/amd-dp/mer-sea/sncn-nss/index-fra.html">Stratégie nationale de construction navale</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte//vessel-maint-navire-2020-21-fra.html">Calendrier de l'entretien des navires</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.ccg-gcc.gc.ca/college/index-fra.html" class="item">Collège de la GCC</a>
-                <ul class="sm list-unstyled" id="contribute" role="menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/college/officer-training-formation-officier/index-fra.html">Programme de formation des officiers</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/college/op-training-formation-op-fra.html">Formation opérationnelle</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/college-careers-fra.html">Collège et carrières - Plus</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.ccg-gcc.gc.ca/careers-carrieres/index-fra.html" class="item">Carrières à la GCC</a>
-                <ul class="sm list-unstyled" role="menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/job-emploi-fra.html">Possibilités d’emploi actuelles</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/student-job-emplois-etudiants-fra.html">Emplois pour étudiants</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/volunteers-benevoles-fra.html">Bénévolat</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/programs-services-fra.html">Programmes et services - Plus</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" class="item">Contactez-nous</a>
-            </li>
+            <li><a href="/fr/Index" class="item">Outil de compétence professionnelle</a></li>
+            <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
+            <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
+            <li><a href="/fr/Student/Index">Étudiant</a></li>
+            <li><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" class="item">Contactez-nous</a>
         </ul>
     </div>
 </div>
