Added FAQs EN & FR

--- a/Web/wwwroot/ajax/sitemenu-ccg-en.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-en.html
@@ -5,13 +5,14 @@
         <div class="pnl-strt container visible-md visible-lg nvbar">
             <h2>Site menu</h2>
                <div class="row">
-                <ul class="list-inline menu" role="menubar">
-                  <li><a href="/en/" class="item">Career Competency Tool</a></li>
-                  <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
-                  <li><a href="/en/Candidate/Index">External Candidate</a></li>
-                  <li><a href="/en/Student/Index">Student</a></li>
-                  <li><a href="https://www.ccg-gcc.gc.ca/contact/index-eng.html" class="item">Contact us</a></li>
-                </ul>
+                   <ul class="list-inline menu" role="menubar">
+                       <li><a href="/en/" class="item">Career Competency Tool</a></li>
+                       <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
+                       <li><a href="/en/Candidate/Index">External Candidate</a></li>
+                       <li><a href="/en/Student/Index">Student</a></li>
+                       <li><a href="/en/Faqs">FAQs</a></li>
+                       <li><a href="https://www.ccg-gcc.gc.ca/contact/index-eng.html" class="item">Contact us</a></li>
+                   </ul>
               </div>
         </div>
     </body>
