Faq & contact pages and menu with 2 new photos

--- a/Web/wwwroot/ajax/sitemenu-ccg-fr.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-fr.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-<div class="pnl-strt container visible-md visible-lg nvbar">
-    <h2>Menu du site</h2>
+<body>
+    <div class="pnl-strt container visible-md visible-lg nvbar">
+        <h2>Menu du site</h2>
 
-    <div class="row">
-        <ul class="list-inline menu" role="menubar">
-            <li><a href="/fr/Index" class="item">Outil de compétence professionnelle</a></li>
-            <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
-            <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
-            <li><a href="/fr/Student/Index">Étudiant</a></li>
-            <li><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" class="item">Contactez-nous</a>
-        </ul>
+        <div class="row">
+            <ul class="list-inline menu" role="menubar">
+                <li><a href="/fr/Index" class="item">Outil de compétence professionnelle</a></li>
+                <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
+                <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
+                <li><a href="/fr/Student/Index">Étudiant</a></li>
+                <li><a href="/fr/FAQs">FAQs</a></li>
+                <li><a href="/fr/Contact">Contactez-nous</a></li>
+            </ul>
+        </div>
     </div>
-</div>
+</body>
 </html>
