--- a/Web/wwwroot/ajax/sitemenu-ccg-en.html
+++ b/Web/wwwroot/ajax/sitemenu-ccg-en.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head>
-    <body>
-        <div class="pnl-strt container visible-md visible-lg nvbar">
-            <h2>Site menu</h2>
-               <div class="row">
-                   <ul class="list-inline menu" role="menubar">
-                       <li><a href="/en/" class="item">Career Competency Tool</a></li>
-                       <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
-                       <li><a href="/en/Candidate/Index">External Candidate</a></li>
-                       <li><a href="/en/Student/Index">Student</a></li>
-                       <li><a href="https://www.ccg-gcc.gc.ca/contact/index-eng.html" class="item">Contact us</a></li>
-                   </ul>
-              </div>
+<body>
+    <div class="pnl-strt container visible-md visible-lg nvbar">
+        <h2>Site menu</h2>
+        <div class="row">
+            <ul class="list-inline menu" role="menubar">
+                <li><a href="/en/" class="item">Career Competency Tool</a></li>
+                <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
+                <li><a href="/en/Candidate/Index">External Candidate</a></li>
+                <li><a href="/en/Student/Index">Student</a></li>
+                <li><a href="/en/FAQs">FAQs</a></li>
+                <li><a href="/en/Contact">Contact us</a></li>
+            </ul>
         </div>
-    </body>
+    </div>
+</body>
 </html>
